add query engine

--- a/arxivret.cabal
+++ b/arxivret.cabal
@@ -61,7 +61,7 @@ executable arxivret
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules: Wrapper, Parser
+    -- other-modules: Wrapper, Parser, Query
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
