--- a/arxivret.cabal
+++ b/arxivret.cabal
@@ -54,6 +54,9 @@ common warnings
     ghc-options: -Wall
 
 executable arxivret
+    ghc-options:
+        -threaded
+
     -- Import common warning flags.
     import:           warnings
 
@@ -72,7 +75,10 @@ executable arxivret
                       network,
                       http-conduit,
                       bytestring,
-                      tagsoup
+                      tagsoup,
+                      brick,
+                      vty,
+                      text
 
     -- Directories containing source files.
     hs-source-dirs:   app
